<resources>
    <string name="app_name">FakeStore</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="min_char">Minimum %1$d characters</string>
    <string name="field_is_empty">The field should not be empty</string>
    <string name="required_field">Please enter all data correctly</string>
    <string name="login_success_message">Login Success</string>
    <string name="greeting">Hello, %s 👋🏻</string>
    <string name="default_greeting">Hello!</string>
    <string name="greeting_message">What do you want to buy?</string>
    <string name="choose_category_label">Choose Category</string>
    <string name="rating_dummy">4.8</string>
    <string name="count_rating">(%s Reviews)</string>
    <string name="format_price">$%s</string>
    <string name="description_label">Description</string>
    <string name="details">Details</string>
    <string name="check_out">Check Out</string>
    <string name="price">Price</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="number">Number</string>
    <string name="zip_code">Zip Code</string>
    <string name="greeting_login">Hello Again 👋🏻</string>
    <string name="greeting_message_login">Welcome back, you\'ve been missed!</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="banner_url">https://img.freepik.com/premium-vector/final-offer-banner-with-super-sale-retail-discount_419341-1123.jpg?w=1380</string>
    <string name="order">Order</string>
    <string name="cart">Cart</string>
    <string name="remove">Remove</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="payment_details">Payment details</string>
    <string name="subtotal">Subtotal</string>
    <string name="fee">Fee</string>
    <string name="total">Total</string>
    <string name="format_quantity">x%s</string>
    <string name="empty_title">Your shopping cart is empty</string>
    <string name="empty_message">Let\'s add items to the cart to see them here.</string>
    <string name="success_order_title">Yeay! Order Successfully Made</string>
    <string name="success_order_message">We will confirm and ship your order immediately. Thank you for shopping with us!</string>
    <string name="item_added_successfully">Successfully add to cart</string>
    <string name="item_updated_successfully">Item updated successfully</string>
    <string name="item_deleted_successfully">Item deleted successfully</string>
    <string name="back_to_home">Back to Home</string>
</resources>