<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.SuccessOrderFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/bg_success_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_success_order_title"
        style="@style/CustomFontTextViewSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success_order_title"
        android:textSize="@dimen/text_heading_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_success_order_message"
        style="@style/CustomFontTextViewMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/xlarge_margin"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:lineSpacingExtra="2dp"
        android:text="@string/success_order_message"
        android:textAlignment="center"
        android:textColor="@color/md_theme_secondary"
        android:textSize="@dimen/text_mid_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_success_order_title" />

    <TextView
        android:id="@+id/tv_back_to_home"
        style="@style/CustomFontTextViewMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/regular_margin"
        android:layout_marginBottom="@dimen/regular_margin"
        android:background="@drawable/bg_round_5_primary"
        android:elevation="4dp"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:paddingVertical="@dimen/medium_margin"
        android:text="@string/back_to_home"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>