<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CheckOutFragment">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:background="@drawable/bg_round_20_grey"
            android:padding="@dimen/mid_small_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView5"
                style="@style/CustomFontTextViewSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:text="@string/shopping_cart"
                android:textSize="@dimen/text_heading_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mid_small_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:itemCount="3"
                tools:listitem="@layout/item_checkout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:layout_marginTop="@dimen/regular_margin"
            android:background="@drawable/bg_round_20_grey"
            android:padding="@dimen/mid_small_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <TextView
                android:id="@+id/tv_payment_details"
                style="@style/CustomFontTextViewSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:text="@string/payment_details"
                android:textSize="@dimen/text_heading_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_subtotal_label"
                style="@style/CustomFontTextViewMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/subtotal"
                android:textColor="@color/md_theme_secondary"
                android:textSize="@dimen/text_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_payment_details" />

            <TextView
                android:id="@+id/tv_subtotal"
                style="@style/CustomFontTextViewSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:text="@string/format_price"
                android:textSize="@dimen/text_large"
                app:layout_constraintBottom_toBottomOf="@+id/tv_subtotal_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_subtotal_label" />

            <TextView
                android:id="@+id/tv_fee_label"
                style="@style/CustomFontTextViewMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/extra_small_margin"
                android:text="@string/fee"
                android:textColor="@color/md_theme_secondary"
                android:textSize="@dimen/text_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_subtotal_label" />

            <TextView
                android:id="@+id/tv_fee"
                style="@style/CustomFontTextViewSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:text="@string/format_price"
                android:textSize="@dimen/text_large"
                app:layout_constraintBottom_toBottomOf="@+id/tv_fee_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_fee_label" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/small_margin"
                android:layout_marginTop="@dimen/mid_small_margin"
                android:background="@color/md_theme_secondaryContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_fee_label" />

            <TextView
                android:id="@+id/tv_total_label"
                style="@style/CustomFontTextViewSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/total"
                android:textSize="@dimen/text_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/tv_total"
                style="@style/CustomFontTextViewSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:text="@string/format_price"
                android:textSize="@dimen/text_xlarge"
                app:layout_constraintBottom_toBottomOf="@+id/tv_total_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_total_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_order"
            style="@style/CustomFontTextViewMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/regular_margin"
            android:layout_marginBottom="@dimen/regular_margin"
            android:background="@drawable/bg_round_5_primary"
            android:elevation="4dp"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:paddingVertical="@dimen/medium_margin"
            android:text="@string/order"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/md_theme_primary"
        android:indeterminateTintMode="src_atop"
        android:overScrollMode="never"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>